# club-bears

./: README.md
client/: package.json
client/src/: App.tsx  Game.ts  globals.d.ts  index.css
client/src/modules/networking/: PacketTypes.ts  arrayBufferUtils.ts  index.ts
client/src/modules/rendering/: Mesh.ts  Shader.ts  Transform.ts  index.ts
client/src/modules/resources/: TextureResource.ts  index.ts
server/: Cargo.toml
server/src/: main.rs
server/src/packet/: bytes.rs  mod.rs  outbound_packet.rs
server/src/server/: mod.rs  players.rs  structs.rs
